--- a/wp7-donor/Donor/EventEditPage.xaml
+++ b/wp7-donor/Donor/EventEditPage.xaml
@@ -1,5 +1,4 @@
-﻿<phone:PhoneApplicationPage 
-    x:Class="Donor.EventEditPage"
+﻿<phone:PhoneApplicationPage
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -7,16 +6,89 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:telerikInput="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Input"
     xmlns:WPExtensions="clr-namespace:WPExtensions;assembly=WPExtensions"
-    FontFamily="{StaticResource PhoneFontFamilyNormal}"
-    FontSize="{StaticResource PhoneFontSizeNormal}"
-    Foreground="{StaticResource PhoneForegroundBrush}"
+    xmlns:telerik="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Core" 
+	xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives" 
+    x:Class="Donor.EventEditPage"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
 
     <phone:PhoneApplicationPage.Resources>
+
+    	<telerik:RadPlaneProjectionAnimation x:Key="CloseAnimation" Axes="X" StartAngleX="0" EndAngleX="90" Duration="0:0:.2">
+    		<telerik:RadPlaneProjectionAnimation.Easing>
+    			<ExponentialEase Exponent="4" EasingMode="EaseIn"/>
+    		</telerik:RadPlaneProjectionAnimation.Easing>
+    	</telerik:RadPlaneProjectionAnimation>
+
+    	<telerik:RadPlaneProjectionAnimation x:Key="OpenAnimation" Axes="X" StartAngleX="-90" EndAngleX="0" Duration="0:0:.2">
+    		<telerik:RadPlaneProjectionAnimation.Easing>
+    			<ExponentialEase Exponent="4" EasingMode="EaseOut"/>
+    		</telerik:RadPlaneProjectionAnimation.Easing>
+    	</telerik:RadPlaneProjectionAnimation>
+
+    	<ControlTemplate x:Key="RadDatePickerControlTemplate" TargetType="telerikInput:RadDatePicker">
+    		<telerikPrimitives:RadPickerBox x:Name="PART_PickerBox" 
+    			HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+    			VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+    			PopupOpenAnimation="{StaticResource OpenAnimation}"
+    			PopupCloseAnimation="{StaticResource CloseAnimation}"
+    			Header="{TemplateBinding Header}"
+    			HeaderTemplate="{TemplateBinding HeaderTemplate}"
+    			HeaderStyle="{TemplateBinding HeaderStyle}"
+    			ContentTemplate="{TemplateBinding EmptyContentTemplate}"
+    			PickerButtonStyle="{StaticResource ToggleButtonDarkRedStyle}">                        
+    			<telerikPrimitives:RadPickerBox.ApplicationBarInfo>
+    				<telerikPrimitives:ApplicationBarInfo x:Name="PART_AppBarInfo">
+    					<telerikPrimitives:ApplicationBarButton x:Name="PART_OKButton" />
+    					<telerikPrimitives:ApplicationBarButton x:Name="PART_CancelButton" />
+    				</telerikPrimitives:ApplicationBarInfo>
+    			</telerikPrimitives:RadPickerBox.ApplicationBarInfo>
+    			<Grid Background="{StaticResource PhoneChromeBrush}">
+    				<Grid.RowDefinitions>
+    					<RowDefinition Height="Auto"/>
+    					<RowDefinition/>
+    				</Grid.RowDefinitions>
+    				<ContentControl 
+						Background="Red"
+    					Margin="24, 55, 0, 24"
+    					FontFamily="{StaticResource PhoneFontFamilySemiBold}"
+    					FontWeight="SemiBold"
+    					FontSize="{StaticResource PhoneFontSizeMedium}"
+    					Grid.Row="0"
+    					x:Name="PART_PopupHeader"
+    					Content="Выберите дату"
+    					ContentTemplate="{TemplateBinding PopupHeaderTemplate}"
+    					HorizontalContentAlignment="Left"
+                                    />
+    				<telerikInput:RadDateSelector 
+    					Grid.Row="1"
+    					x:Name="PART_Selector"
+    					Step="{TemplateBinding Step}"
+    					DayStepBehavior="{TemplateBinding DayStepBehavior}"
+    					MonthStepBehavior="{TemplateBinding MonthStepBehavior}"
+    					YearStepBehavior="{TemplateBinding YearStepBehavior}"
+    					ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+    					AppointmentSource="{TemplateBinding AppointmentSource}"
+    					Style="{TemplateBinding SelectorStyle}"/>
+    			</Grid>
+    		</telerikPrimitives:RadPickerBox>
+    	</ControlTemplate>
+
+
 	</phone:PhoneApplicationPage.Resources>
+
+	<phone:PhoneApplicationPage.FontFamily>
+		<StaticResource ResourceKey="PhoneFontFamilyNormal"/>
+	</phone:PhoneApplicationPage.FontFamily>
+	<phone:PhoneApplicationPage.FontSize>
+		<StaticResource ResourceKey="PhoneFontSizeNormal"/>
+	</phone:PhoneApplicationPage.FontSize>
+	<phone:PhoneApplicationPage.Foreground>
+		<StaticResource ResourceKey="PhoneForegroundBrush"/>
+	</phone:PhoneApplicationPage.Foreground>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot">
@@ -79,16 +151,108 @@
                     <TextBlock Text="{Binding DateAndTime, Source={StaticResource Loc}}"
 			Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
                     <StackPanel Orientation="Horizontal">
-                        <toolkit:DatePicker Width="250" Name="Date" 
-					Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
-                        <toolkit:TimePicker x:Name="Time"  Width="200" Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
+                        <!--<toolkit:DatePicker Width="250" Name="Date" 
+					Background="#FF4F3B34" Foreground="#FFDF8D4B"/>-->
+                        <!--Template="{StaticResource RadDatePickerControlTemplate}" 
+                        PickerButtonStyle="{StaticResource ToggleButtonDarkRedStyle}"-->
+                        <telerikInput:RadDatePicker 
+                            Width="250" 
+                            x:Name="Date" 
+					        Background="#FF4F3B34" 
+                            Foreground="#FFDF8D4B" 
+                            EmptyContent="Выберите дату" 
+							Margin="0,-8,0,0">
+                        </telerikInput:RadDatePicker>
+                        <telerikInput:RadTimePicker x:Name="Time"
+                            Background="#FF4F3B34" 
+                            Width="200" Margin="0,-8,0,0"
+                            Foreground="#FFDF8D4B" 
+                            EmptyContent="Время">
+                            <telerikInput:RadTimePicker.PickerButtonStyle>
+                                <Style TargetType="ToggleButton">                                    
+                                    <Setter Property="Padding" Value="8, 8, 8, 7"/>
+                                    <Setter Property="BorderThickness" Value="1"/>
+                                    <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMedium}"/>
+                                    <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilyNormal}"/>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="ToggleButton">
+                                                <Grid Background="Transparent">
+                                                    <VisualStateManager.VisualStateGroups>
+                                                        <VisualStateGroup x:Name="CommonStates">
+                                                            <VisualState x:Name="Normal">
+                                                                <Storyboard>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="EnabledBackground">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0" Value="Blue"/>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="EnabledBackground">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxBrush}"/>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="EnabledContent">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0" Value="White"/>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                </Storyboard>
+                                                            </VisualState>
+                                                            <VisualState x:Name="Disabled">
+                                                                <Storyboard>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="EnabledBackground">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0">
+                                                                            <DiscreteObjectKeyFrame.Value>
+                                                                                <Visibility>Collapsed</Visibility>
+                                                                            </DiscreteObjectKeyFrame.Value>
+                                                                        </DiscreteObjectKeyFrame>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="DisabledBackground">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0">
+                                                                            <DiscreteObjectKeyFrame.Value>
+                                                                                <Visibility>Visible</Visibility>
+                                                                            </DiscreteObjectKeyFrame.Value>
+                                                                        </DiscreteObjectKeyFrame>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                </Storyboard>
+                                                            </VisualState>
+                                                            <VisualState x:Name="Pressed">
+                                                                <Storyboard>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="EnabledBackground">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxEditBackgroundBrush}"/>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="EnabledBackground">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxForegroundBrush}"/>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="EnabledContent">
+                                                                        <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxForegroundBrush}"/>
+                                                                    </ObjectAnimationUsingKeyFrames>
+                                                                </Storyboard>
+                                                            </VisualState>
+                                                        </VisualStateGroup>
+                                                        <VisualStateGroup x:Name="CheckStates">
+                                                            <VisualState x:Name="Unchecked"/>
+                                                        </VisualStateGroup>
+                                                    </VisualStateManager.VisualStateGroups>
+                                                    <Border x:Name="EnabledBackground" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="Blue" Margin="{StaticResource PhoneTouchTargetOverhang}">
+                                                        <ContentControl x:Name="EnabledContent" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Foreground="White" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                                    </Border>
+                                                    <Border x:Name="DisabledBackground" BorderBrush="{StaticResource PhoneDisabledBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="Transparent" IsHitTestVisible="False" Margin="{StaticResource PhoneTouchTargetOverhang}" Visibility="Collapsed">
+                                                        <ContentControl x:Name="DisabledContent" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Foreground="{StaticResource PhoneDisabledBrush}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                                    </Border>
+                                                </Grid>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </telerikInput:RadTimePicker.PickerButtonStyle>
+                        </telerikInput:RadTimePicker>
+                        <!--<toolkit:TimePicker x:Name="Time"  
+                            Width="200" 
+                            Background="#FF4F3B34" 
+                            Foreground="#FFDF8D4B"/> -->
                         <!--Value="{Binding Time, Mode=TwoWay}" -->
                     </StackPanel>
                     <TextBlock Text="{Binding Place, Source={StaticResource Loc}}"
 			 Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
                     
                 <StackPanel Orientation="Horizontal">
-                    <TextBox Name="Place" Text="{Binding Place, Mode=TwoWay}"
+                    <TextBox x:Name="Place" Text="{Binding Place, Mode=TwoWay}"
 			Style="{StaticResource TextBoxStyle1}" Width="400"/>
                         <Border>
                             <Image Height="50" Source="images/ic_map.png" 
@@ -96,7 +260,7 @@
                         </Border>
                     </StackPanel>
                     
-                <StackPanel Name="Reminder" Visibility="Collapsed">
+                <StackPanel x:Name="Reminder" Visibility="Collapsed">
                         <TextBlock Text="{Binding Reminder, Source={StaticResource Loc}}" Style="{StaticResource Text24px847168}" Visibility="Collapsed"/>
                     <toolkit:ListPicker  x:Name="ReminderPeriod" 
 					Style="{StaticResource ListPickerStyle1}"
@@ -115,7 +279,7 @@
                             </DataTemplate>
                         </toolkit:ListPicker.ItemTemplate>
                         </toolkit:ListPicker>
-                    <CheckBox Name="KnowAboutResults" Visibility="Collapsed" 
+                    <CheckBox x:Name="KnowAboutResults" Visibility="Collapsed" 
 					FontSize="24"
 					Content="{Binding KnowResult, Source={StaticResource Loc}}" IsChecked="{Binding ReminderMessage, Mode=TwoWay}" Foreground="#FF847168"/>
                 </StackPanel>
@@ -126,8 +290,7 @@
                     Text="{Binding Description, Mode=TwoWay}" 
 			Style="{StaticResource TextBoxStyle1}"
 			Name="Description" />-->
-                    <ScrollViewer x:Name="InputScrollViewer">
-                    </ScrollViewer>
+                    <ScrollViewer x:Name="InputScrollViewer"/>
                     <TextBox Style="{StaticResource TextBoxStyle1}" 
                                  TextWrapping="Wrap" 
                                  Text="{Binding Description, Mode=TwoWay}" 
@@ -142,10 +305,10 @@
             </ScrollViewer>
         </Grid>
 
-        <WPExtensions:AdvancedApplicationBar Name="AppBar" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White"
+        <WPExtensions:AdvancedApplicationBar x:Name="AppBar" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White"
 		IsVisible="True" IsMenuEnabled="True">
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_done.png" Name="SaveButton" Text="{Binding Save, Source={StaticResource Loc}}" Visibility="Visible" Click="SaveButton_Click" />
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.cancel.png" Name="CancelButton" Text="{Binding Cancel, Source={StaticResource Loc}}" Visibility="Visible" Click="CancelButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_done.png" x:Name="SaveButton" Text="{Binding Save, Source={StaticResource Loc}}" Visibility="Visible" Click="SaveButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.cancel.png" x:Name="CancelButton" Text="{Binding Cancel, Source={StaticResource Loc}}" Visibility="Visible" Click="CancelButton_Click" />
         </WPExtensions:AdvancedApplicationBar>
 
     </Grid>
