--- a/Donor/view/controller/calendar/HSEventViewController.xib
+++ b/Donor/view/controller/calendar/HSEventViewController.xib
@@ -44,7 +44,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 109}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1007581772"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -59,7 +58,6 @@
 						<int key="NSvFlags">298</int>
 						<string key="NSFrame">{{160, 29}, {150, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="349767820"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -91,7 +89,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="898900240"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -106,7 +103,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 29}, {89, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="888102303"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -138,7 +134,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 68}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="557056225"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="278871441">
@@ -174,7 +169,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{103, 33}, {18, 14}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="883579600"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -189,7 +183,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 200}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="846149252"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -201,7 +194,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 177}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522862800"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -216,7 +208,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 175}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="103334164"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -247,7 +238,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{10, 211}, {300, 120}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -271,7 +261,6 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{10, 142}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="820919899"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -283,7 +272,6 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{295, 119}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="463137177"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -298,7 +286,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 117}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="790355733"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -322,7 +309,6 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{10, 146}, {300, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -343,7 +329,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 331}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="579151745"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -358,7 +343,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="297999329"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="356500051"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -373,7 +357,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 2}, {320, 434}}</string>
 						<reference key="NSSuperview" ref="297999329"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -383,7 +366,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 436}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="111771185"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -403,7 +385,6 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrameSize">{320, 140}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="262256123"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -418,7 +399,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="186740919"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -430,7 +410,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 25}, {135, 29}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="128747144"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -455,7 +434,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 99}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="721546176"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -481,7 +459,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 69}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="894565533"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -507,7 +484,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{148, 35}, {10, 13}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="376805095"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -522,7 +498,6 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{9, 231}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="381190317"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -534,7 +509,6 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{294, 208}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="719721950"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -546,7 +520,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 206}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="254960798"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -570,7 +543,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{0, 358}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -600,7 +572,6 @@
 						<int key="NSvFlags">298</int>
 						<string key="NSFrame">{{160, 33}, {150, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="497633611"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -625,7 +596,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{10, 235}, {300, 120}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1039551626"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -650,7 +620,6 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{10, 173}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="411178108"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -662,7 +631,6 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{295, 150}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="614907639"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -674,7 +642,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 148}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1015154728"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -698,7 +665,6 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{10, 177}, {300, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="837810446"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -720,7 +686,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 402}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="859539592"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -1151,103 +1116,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">163</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">HSEventViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">eventDoneButtonClicked:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">eventDoneButtonClicked:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">eventDoneButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bloodDonationCommentTextView">UITextView</string>
-						<string key="bloodDonationDateLabel">UILabel</string>
-						<string key="bloodDonationLabAddressLabel">UILabel</string>
-						<string key="bloodDonationReminderLabel">UILabel</string>
-						<string key="bloodDonationTypeLabel">UILabel</string>
-						<string key="bloodDonationView">UIView</string>
-						<string key="bloodTestsCommentsTextView">UITextView</string>
-						<string key="bloodTestsDateLabel">UILabel</string>
-						<string key="bloodTestsLabAddressLabel">UILabel</string>
-						<string key="bloodTestsReminderLabel">UILabel</string>
-						<string key="bloodTestsView">UIView</string>
-						<string key="doneButton">UIButton</string>
-						<string key="rootScrollView">UIScrollView</string>
-						<string key="rootView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bloodDonationCommentTextView">
-							<string key="name">bloodDonationCommentTextView</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationDateLabel">
-							<string key="name">bloodDonationDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationLabAddressLabel">
-							<string key="name">bloodDonationLabAddressLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationReminderLabel">
-							<string key="name">bloodDonationReminderLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationTypeLabel">
-							<string key="name">bloodDonationTypeLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationView">
-							<string key="name">bloodDonationView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsCommentsTextView">
-							<string key="name">bloodTestsCommentsTextView</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsDateLabel">
-							<string key="name">bloodTestsDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsLabAddressLabel">
-							<string key="name">bloodTestsLabAddressLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsReminderLabel">
-							<string key="name">bloodTestsReminderLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsView">
-							<string key="name">bloodTestsView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="doneButton">
-							<string key="name">doneButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rootScrollView">
-							<string key="name">rootScrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rootView">
-							<string key="name">rootView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HSEventViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
